--- a/src/app/reactive-status-button/reactive-status-button.component.html
+++ b/src/app/reactive-status-button/reactive-status-button.component.html
@@ -4,13 +4,13 @@
     <button [class] = "'button-status-' + obs.currentStatusValue">
         <ng-container *ngSwitch="obs.currentStatusValue">
             <ng-container *ngSwitchCase="BUTTON_STATUS.DEFAULT">
-                <ng-content  [slot] = "BUTTON_STATUS.DEFAULT"></ng-content>
+                <ng-content  [select] = "BUTTON_STATUS.DEFAULT"></ng-content>
             </ng-container>
             <ng-container *ngSwitchCase="BUTTON_STATUS.WORKING">
-                <ng-content  [slot] = "BUTTON_STATUS.WORKING"></ng-content>
+                <ng-content  [select] = "BUTTON_STATUS.WORKING"></ng-content>
             </ng-container>
             <ng-container *ngSwitchCase="BUTTON_STATUS.DONE">
-                <ng-content  [slot] = "BUTTON_STATUS.DONE"></ng-content>
+                <ng-content  [select] = "BUTTON_STATUS.DONE"></ng-content>
             </ng-container>
         </ng-container>     
     </button>
