--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-  <app-zipcode-entry> </app-zipcode-entry>
+  <app-new-weather-data-entry-container> </app-new-weather-data-entry-container>
   <app-current-conditions-container></app-current-conditions-container>
 
 </div>
