--- a/src/app/new-weather-data-entry-container/new-weather-data-entry-container.component.html
+++ b/src/app/new-weather-data-entry-container/new-weather-data-entry-container.component.html
@@ -1,24 +1,29 @@
-<div class="well">
-  
-  <app-zipcode-entry
-    [(zipCode)] = "newWeatherDataEntry.zipCode"
-  ></app-zipcode-entry>
+<div class="well weather-data-entry-container">
 
-  <!---
-  <button class="btn btn-primary" (click)="addLocation()" >
-    Add location
-  </button>
--->
+      <div class = "weather-data-entry-item">
+        <!-- Zip Code Input -->
+        <app-zipcode-entry
+        [(zipCode)] = "newWeatherDataEntry.zipCode"
+        ></app-zipcode-entry>
+      </div>
+     
+      <div class = "weather-data-entry-item">
+        <!-- Country Input -->
+        <app-country-entry
+        ></app-country-entry>
+      </div>
 
-  <app-reactive-status-button
-    [asyncTaskFn]="addLocationFn"
-    [defaultContent] = "defaultContent"
-    [workingContent] = "workingContent"
-    [doneContent] = "doneContent"
-    (statusChange)="onButtonStatusChanged($event)"
-  >  </app-reactive-status-button>
+      <div class = "weather-data-entry-item">
+        <app-reactive-status-button
+        [asyncTaskFn]="addLocationFn"
+        [defaultContent] = "defaultContent"
+        [workingContent] = "workingContent"
+        [doneContent] = "doneContent"
+        (statusChange)="onButtonStatusChanged($event)"
+        >  </app-reactive-status-button>
+      </div>
+      
 
-  <i class="fas fa-star pr-2" aria-hidden="true"></i>
   <ng-template #defaultContent>
     <button class = "btn btn-primary" [disabled]="!newWeatherDataEntry.zipCode">Add Location</button>
   </ng-template>
@@ -31,5 +36,9 @@
   <ng-template #doneContent>
     <button class = "btn btn-success">  <i class="bi bi-check2-circle"></i>  Done!</button>
   </ng-template>
+
+
+
+
 
 </div>
