--- a/src/app/new-weather-data-entry-container/country-entry/country-entry.component.html
+++ b/src/app/new-weather-data-entry-container/country-entry/country-entry.component.html
@@ -1,14 +1,18 @@
 <ng-container *ngIf = "{filteredCountriesVal: filteredCountries$ | async} as obs">
- 
-    <h2>Enter a Country:</h2>
-    <input type="text" #countryNameInput (mouseenter)="showCountryList = true" (mouseleave)="showCountryList = false"
-      [ngModel] = "countryCode" (ngModelChange)="countryInputChanged($event)" 
-      placeholder="Country" class="form-control">
-    <div class="country-list" name="country" id="country" *ngIf = "">
-      <option value="" disabled selected>Select Country</option>
-      <option *ngFor="let country of obs.filteredCountriesVal" [value]="country">{{country.name}}</option>
-    </div>
-
+    <div class="country-entry-container" >
+      <h2>Enter a Country:</h2>
+      <input type="text" 
+        [ngModel] = "countryName" (ngModelChange)="countryInputChanged($event)" 
+        placeholder="Enter country name" class="form-control" 
+        (focus)="showCountryList = true" >
   
+      <div class="country-list" name="country" id="country" *ngIf  = "showCountryList">
+        <ng-container *ngFor="let country of obs.filteredCountriesVal" >
+          <div class="country-list-item" (click) = "onCountrySelected(country)">
+            <span [innerHTML] = "countryName | boldMatchingText: country.name"></span>
+          </div>
+        </ng-container>
+      </div>
+    </div>
 </ng-container>
 
