--- a/src/app/current-conditions-item/current-conditions-item.component.html
+++ b/src/app/current-conditions-item/current-conditions-item.component.html
@@ -9,7 +9,7 @@
           - Min {{location.data.main.temp_min | number:'.0-0'}}°
         </p>
         <p>
-          <a [routerLink]="['/forecast', location.zip]" >Show 5-day forecast for {{location.data.name}}</a>
+          <a [routerLink]="['/forecast', location.zip]"  [queryParams]="{ countryCode: location.data.sys.country }" >Show 5-day forecast for {{location.data.name}}</a>
         </p>
       </div>
       <div>
