--- a/src/app/new-weather-data-entry-container/new-weather-data-entry-container.component.html
+++ b/src/app/new-weather-data-entry-container/new-weather-data-entry-container.component.html
@@ -3,13 +3,14 @@
       <div class = "weather-data-entry-item">
         <!-- Zip Code Input -->
         <app-zipcode-entry
-        [(zipCode)] = "newWeatherDataEntry.zipCode"
+          [(zipCode)] = "newWeatherDataEntry.zipCode"
         ></app-zipcode-entry>
       </div>
      
       <div class = "weather-data-entry-item">
         <!-- Country Input -->
         <app-country-entry
+          [(countryCode)] = "newWeatherDataEntry.countryCode"
         ></app-country-entry>
       </div>
 
@@ -27,12 +28,14 @@
   <ng-template #defaultContent>
     <button class = "btn btn-primary" [disabled]="!newWeatherDataEntry.zipCode">Add Location</button>
   </ng-template>
+
   <ng-template #workingContent>
     <button class = "btn btn-primary" disabled>
       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
       Adding...
     </button>
   </ng-template>
+  
   <ng-template #doneContent>
     <button class = "btn btn-success">  <i class="bi bi-check2-circle"></i>  Done!</button>
   </ng-template>
