sanitize country data

--- a/src/app/new-weather-data-entry-container/country-entry/country-entry.component.html
+++ b/src/app/new-weather-data-entry-container/country-entry/country-entry.component.html
@@ -6,9 +6,9 @@
         placeholder="Enter country name" class="form-control" 
         (focus)="showCountryList = true" >
   
-      <div class="country-list" name="country" id="country" *ngIf  = "showCountryList">
-        <ng-container *ngFor="let country of obs.filteredCountriesVal" >
-          <div class="country-list-item" (click) = "onCountrySelected(country)">
+      <div   class="country-list" name="country" id="country" *ngIf  = "showCountryList">
+        <ng-container *ngFor="let country of obs.filteredCountriesVal; let index as i" >
+          <div [tabindex]="i" class="country-list-item" (keyup.enter) = "onCountrySelected(country)" (click) = "onCountrySelected(country)">
             <span [innerHTML] = "countryName | boldMatchingText: country.name"></span>
           </div>
         </ng-container>
