project structure refactoring

--- a/src/app/main-page/current-conditions-container/current-conditions/current-conditions-item/current-conditions-item.component.html
+++ b/src/app/main-page/current-conditions-container/current-conditions/current-conditions-item/current-conditions-item.component.html
@@ -14,7 +14,7 @@
       </div>
       <div>
         <button class="btn btn-danger cancel-button"  (click)="removeLocation($event)"> <i class="icon bi bi-x"></i>        </button>
-        <img [src]="location.data | getWeatherConditionIconUrl">
+        <img class = "weather-image" [src]="location.data | getWeatherConditionIconUrl">
       </div>
     </div>
     
