--- a/src/app/main-page/new-weather-data-entry-container/country-entry/country-entry.component.html
+++ b/src/app/main-page/new-weather-data-entry-container/country-entry/country-entry.component.html
@@ -7,7 +7,7 @@
         (focus)="onCountryInputFocus()" (blur)="onCountryLostFocus()"  >
   
       <div class="country-list" name="country" id="country" *ngIf = "showCountryList">
-        <ng-container *ngFor="let country of obs.filteredCountriesVal; let index as i" >
+        <ng-container *ngFor="let country of obs.filteredCountriesVal" >
           <div class="country-list-item" (click) = "onCountrySelected(country)">
             <span [innerHTML] = "countryName | boldMatchingText: country.name"></span>
           </div>
