--- a/src/app/main-page/new-weather-data-entry-container/new-weather-data-entry-container.component.css
+++ b/src/app/main-page/new-weather-data-entry-container/new-weather-data-entry-container.component.css
@@ -8,3 +8,12 @@
   margin-left: 30px;
   height: 100%;
 }
+
+
+.warning-container {
+  margin-top: 15px;
+  margin-left: 30px;
+  width: fit-content;
+  font-weight: bold;
+  font-size: 15px;
+}
