--- a/src/app/main-page/new-weather-data-entry-container/zipcode-entry/zipcode-entry.component.html
+++ b/src/app/main-page/new-weather-data-entry-container/zipcode-entry/zipcode-entry.component.html
@@ -1,3 +1,4 @@
   <h2>Enter a zipcode:</h2>
-  <input type="text" [ngModel] = "zipCode" (ngModelChange)="zipCodeChange.emit($event)" placeholder="Zipcode" class="form-control">
+  <input  type="text" [ngModel] = "zipCode" (ngModelChange)="zipCodeChange.emit($event)" 
+          placeholder="Zipcode" class="form-control">
 
