update to ng 13

--- a/src/app/forecasts-list/forecasts-list.component.html
+++ b/src/app/forecasts-list/forecasts-list.component.html
@@ -19,5 +19,5 @@
       </ul>
     </div>
   </div>
-  <button class="btn btn-success" [routerLink]="'/'" >< Back to main page</button>
+  <button class="btn btn-success" [routerLink]="['/']" >< Back to main page</button>
   </ng-container>
